--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,9 @@ jobs:
     runs-on: windows-latest
     steps:
       -
+        name: Test
+        run: ls
+        shell: powershell
         name: Inno Build
         run: |
           & "${env:ProgramFiles(x86)}\Inno Setup 6\iscc.exe" "$env:GITHUB_WORKSPACE\win-build\setup.iss"
