--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,9 @@ jobs:
     runs-on: windows-latest
     steps:
       -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
         name: Test
         run: ls
         shell: powershell
