--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,9 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version: ">=1.19.7"
       -
         name: Go Build
         run: go build -o ./win-build/ssh-sync.exe
@@ -34,5 +37,5 @@ jobs:
       -
         name: Inno Build
         run: |
-          & "${env:ProgramFiles(x86)}\Inno Setup 6\iscc.exe" "$env:GITHUB_WORKSPACE\win-build\setup.iss"
+          & "${env:ProgramFiles(x86)}\Inno Setup 6\iscc.exe" /dMyAppVersion="${{github.ref_name}}" "$env:GITHUB_WORKSPACE\win-build\setup.iss"
         shell: powershell
