--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,6 +55,7 @@ jobs:
           retention-days: 5
   release:
     runs-on: ubuntu-latest
+    needs: [build-docker, build-windows]
     steps:
       - name: Generate release tag
         id: generate_release_tag
