--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,3 +70,5 @@ jobs:
         with:
           artifacts: "./win-build/ssh-sync-setup.exe"
           bodyFile: "body.md"
+          tag_name: ${{ steps.generate_release_tag.outputs.release_tag }}
+          release_name: Release ${{ steps.generate_release_tag.outputs.release_tag }}
