--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,6 @@ jobs:
         uses: amitsingh-007/next-release-tag@v1.0.0
         with:
           github_token: ${{ secrets.ACCESS_TOKEN }}
-          tag_prefix: 'v'
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
       - uses: actions/checkout@v2
@@ -70,5 +69,5 @@ jobs:
         with:
           artifacts: "./win-build/ssh-sync-setup.exe"
           bodyFile: "body.md"
-          tag_name: ${{ steps.generate_release_tag.outputs.release_tag }}
+          tag_: ${{ steps.generate_release_tag.outputs.release_tag }}
           release_name: Release ${{ steps.generate_release_tag.outputs.release_tag }}
