--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: ci
 
-on:
+on: 
   push:
-    branches:
-      - "main"
+    tags:
+    - '*'
 
 jobs:
   build-docker:
@@ -53,20 +53,3 @@ jobs:
           name: ssh-sync-setup
           path: ./win-build/ssh-sync-setup.exe
           retention-days: 5
-  release:
-    runs-on: ubuntu-latest
-    needs: [build-docker, build-windows]
-    steps:
-      - name: Generate release tag
-        id: generate_release_tag
-        uses: amitsingh-007/next-release-tag@v1.0.0
-        with:
-          github_token: ${{ secrets.ACCESS_TOKEN }}
-      - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v3
-      - uses: actions/checkout@v2
-      - uses: ncipollo/release-action@v1
-        with:
-          artifacts: "./win-build/ssh-sync-setup.exe"
-          bodyFile: "body.md"
-          tag: ${{ steps.generate_release_tag.outputs.release_tag }}
