--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,4 +47,4 @@ jobs:
         with:
           go-version: ">=1.19.7"
       - name: Go Build
-        run: go build -o ssh-sync
+        run: go build -o ssh-sync -ldflags "-X main.version=${{github.ref_name}}"
