--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,7 +32,7 @@ jobs:
           go-version: ">=1.19.7"
       -
         name: Go Build
-        run: go build -o ./win-build/ssh-sync.exe
+        run: go build -o ./win-build/ssh-sync.exe -ldflags "-X main.version=${{github.ref_name}}"
         shell: powershell
       -
         name: Inno Build
@@ -47,4 +47,4 @@ jobs:
         with:
           go-version: ">=1.19.7"
       - name: Go Build
-        run: go build -o ssh-sync
+        run: go build -o ssh-sync -ldflags "-X main.version=${{github.ref_name}}"
