--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,6 +84,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install winget
+        uses: Cyberboss/install-winget@v1
       - name: Install wingetcreate
         run: winget install --id=Microsoft.WingetCreate --exact --accept-package-agreements --accept-source-agreements
       - name: Update winget manifest
