--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
           $tag = "${{ github.ref_name }}"
-          wingetcreate update therealpaulgg.ssh-sync --version $tag --token $ACCESS_TOKEN -u https://github.com/therealpaulgg/ssh-sync/releases/download/$tag/ssh-sync-setup.exe --submit
+          wingetcreate update therealpaulgg.ssh-sync --version $tag --token "$env:ACCESS_TOKEN" -u https://github.com/therealpaulgg/ssh-sync/releases/download/$tag/ssh-sync-setup.exe --submit
         shell: powershell
 
 
