use access token

--- a/.github/workflows/update-homebrew-formula.yml
+++ b/.github/workflows/update-homebrew-formula.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: 'therealpaulgg/homebrew-ssh-sync'
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.ACCESS_TOKEN_CLASSIC }}
         path: 'homebrew-tap'
 
     - name: Update Homebrew formula
@@ -42,7 +42,7 @@ jobs:
         sed -i "s|url \".*\"|url \"$TARBALL_URL\"|g" $FORMULA_PATH
         sed -i "s|sha256 \".*\"|sha256 \"$SHA256\"|g" $FORMULA_PATH
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN_CLASSIC }}
 
     - name: Commit and push updates to the tap
       run: |
