--- a/.github/workflows/update-homebrew-formula.yml
+++ b/.github/workflows/update-homebrew-formula.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Update Homebrew formula
       run: |
         cd software
-        sh ./github/workflows/update_formula.sh
+        sh ./.github/workflows/update_formula.sh
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
