--- a/.github/workflows/update-homebrew-formula.yml
+++ b/.github/workflows/update-homebrew-formula.yml
@@ -26,7 +26,6 @@ jobs:
         ls Formula
 
         GITHUB_REPO="therealpaulgg/ssh-sync"
-        FORMULA_PATH="Formula/ssh-sync.rb"
         TAP_REPO="therealpaulgg/homebrew-ssh-sync"
 
         # Fetch the latest release data from GitHub
@@ -40,8 +39,8 @@ jobs:
         SHA256=$(curl -Ls $TARBALL_URL | shasum -a 256 | awk '{print $1}')
 
         # Update the formula with the new version and sha256
-        sed -i "" "s|url \".*\"|url \"$TARBALL_URL\"|g" ./$FORMULA_PATH
-        sed -i "" "s|sha256 \".*\"|sha256 \"$SHA256\"|g" ./$FORMULA_PATH
+        sed -i "" "s|url \".*\"|url \"$TARBALL_URL\"|g" ./Formula/ssh-sync.rb
+        sed -i "" "s|sha256 \".*\"|sha256 \"$SHA256\"|g" ./Formula/ssh-sync.rb
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
