--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "Launch Package",
             "type": "go",
             "request": "launch",
-            "mode": "auto",
+            "mode": "debug",
             "program": "main.go",
-            "args": ["upload"]
+            "args": ["interactive"]
         }
     ]
 }
