--- a/.github/workflows/update-winget-manifest.yml
+++ b/.github/workflows/update-winget-manifest.yml
@@ -8,7 +8,7 @@ jobs:
   update-winget-manifest:
     runs-on: windows-latest
     steps:
-      - uses: vedantmgoyal2009/winget-releaser@v2
+      - uses: vedantmgoyal2009/winget-releaser@main 
         with:
           identifier: therealpaulgg.ssh-sync
           version: ${{ github.ref_name }}
